--- a/_posts/2012-04-23-tibet.md
+++ b/_posts/2012-04-23-tibet.md
@@ -3,8 +3,8 @@ published: true
 layout: post
 title: 西藏四月
 date: 2012-04-23 22:50
-comments: false
-categories: [旅游]
+comments: true
+tags: [旅游]
 ---
 
 ## 行程：
