--- a/_posts/2012-05-09-hurt.md
+++ b/_posts/2012-05-09-hurt.md
@@ -3,8 +3,8 @@ published: false
 layout: post
 title: 摔后感
 date: 2012-05-09 2:23
-comments: false
-categories: [生活]
+comments: true
+tags: [life]
 ---
 
 今晚或者说昨晚洗澡，洗着洗着突然没有体力，极力挣扎未果终于晕倒了。晕倒就晕倒吧，还不知道碰到哪里了，醒来发觉耳后疼痛不已，一摸全是血-_-|||，这是在积累RP么，如果是的话，那么肯定积累了很多很多RP。
